Fixed the spacing between body overview text that wasn't there in the small screen size and adjusted it for the medium size of screen.

--- a/style/homepage.css
+++ b/style/homepage.css
@@ -24,6 +24,7 @@ header img {
     background-color: rgba(234, 200, 50, 0.216);
     border: 3px solid black;
     text-align: center; 
+    margin-bottom: 20px;
 }
 
 .externalButton {
@@ -51,7 +52,9 @@ header img {
         margin-left: 40px;
         margin-right: 40px;
     }
-
+    .body_text{
+        margin-bottom: 0px;
+    }
     header img{
         height: 180px;
         width: 200px;
